--- a/Prep/Prep/Base.lproj/Main.storyboard
+++ b/Prep/Prep/Base.lproj/Main.storyboard
@@ -9,10 +9,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Experience View Controller-->
         <scene sceneID="3Ic-GX-Pkc">
             <objects>
-                <viewController id="1iv-r4-FCH" customClass="ViewController" customModule="Prep" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="1iv-r4-FCH" customClass="ExperienceViewController" customModule="Prep" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="acA-KN-Y4V">
                         <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -26,7 +26,13 @@
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <viewLayoutGuide key="safeArea" id="pGZ-JF-pmF"/>
                     </view>
-                    <navigationItem key="navigationItem" id="FNK-hg-o9c"/>
+                    <navigationItem key="navigationItem" id="FNK-hg-o9c">
+                        <barButtonItem key="rightBarButtonItem" title="Next Panorama" id="cH8-7Z-H4i">
+                            <connections>
+                                <action selector="next_panorama:" destination="1iv-r4-FCH" id="zIa-02-LG2"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="experience_viewer_panorama" destination="3Ag-ON-Nqj" id="B57-UG-D3c"/>
                     </connections>
