--- a/Prep/Prep/Base.lproj/Main.storyboard
+++ b/Prep/Prep/Base.lproj/Main.storyboard
@@ -107,14 +107,26 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <viewLayoutGuide key="safeArea" id="HWn-8M-zAd"/>
                     </view>
-                    <navigationItem key="navigationItem" id="6ko-b6-AtB">
-                        <barButtonItem key="leftBarButtonItem" title="Edit" id="8H3-MA-qpy"/>
-                        <barButtonItem key="rightBarButtonItem" title="Setting" id="6Of-Zh-Rpe">
+                    <toolbarItems>
+                        <barButtonItem style="plain" systemItem="flexibleSpace" id="z5z-Ii-2aa"/>
+                        <barButtonItem style="plain" systemItem="flexibleSpace" id="Qke-3e-UwA"/>
+                        <barButtonItem width="42" style="plain" systemItem="fixedSpace" id="vgY-WK-xlZ"/>
+                        <barButtonItem width="42" style="plain" systemItem="fixedSpace" id="FTG-Im-JQG"/>
+                        <barButtonItem width="42" style="plain" systemItem="fixedSpace" id="LP2-Pj-gct"/>
+                        <barButtonItem width="42" style="plain" systemItem="fixedSpace" id="uw5-3S-3BF"/>
+                        <barButtonItem systemItem="add" id="aZh-ou-EQ8"/>
+                    </toolbarItems>
+                    <navigationItem key="navigationItem" id="2Hi-eA-0oI">
+                        <barButtonItem key="rightBarButtonItem" image="TabBar-Settings" id="33q-1T-Gga">
                             <connections>
-                                <segue destination="rpV-h7-rj8" kind="show" id="G46-mV-5xU"/>
+                                <segue destination="rpV-h7-rj8" kind="show" id="Png-Gi-Jnj"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <outlet property="addButton" destination="aZh-ou-EQ8" id="M77-Av-mTy"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ecM-dE-1hq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -184,15 +196,18 @@
         <!--Navigation Controller-->
         <scene sceneID="gC0-eV-ye0">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="mqO-ad-cVe" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" toolbarHidden="NO" id="mqO-ad-cVe" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="pq6-rJ-nde">
                         <rect key="frame" x="0.0" y="20" width="1024" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="barTintColor" red="0.5490196078431373" green="0.89411764705882346" blue="0.63137254901960782" alpha="1" colorSpace="calibratedRGB"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
+                    <toolbar key="toolbar" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="LCr-WG-co6">
+                        <rect key="frame" x="0.0" y="724" width="1024" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </toolbar>
                     <connections>
                         <segue destination="ILP-Ib-Gy2" kind="relationship" relationship="rootViewController" id="Z3b-q6-gC2"/>
                     </connections>
@@ -204,5 +219,6 @@
     </scenes>
     <resources>
         <image name="Experience1" width="4000" height="968"/>
+        <image name="TabBar-Settings" width="25" height="25"/>
     </resources>
 </document>
