--- a/Prep/Prep/Base.lproj/Main.storyboard
+++ b/Prep/Prep/Base.lproj/Main.storyboard
@@ -244,7 +244,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="70" translatesAutoresizingMaskIntoConstraints="NO" id="caY-pg-Wve">
-                                <rect key="frame" x="0.0" y="173" width="1024" height="422.5"/>
+                                <rect key="frame" x="0.0" y="218.5" width="1024" height="332"/>
                                 <subviews>
                                     <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="PXS-Et-yuQ">
                                         <rect key="frame" x="211.5" y="0.0" width="601" height="29"/>
@@ -257,14 +257,8 @@
                                             <action selector="SignInSelectorChanged:" destination="gDe-7I-zhs" eventType="valueChanged" id="4Km-lb-NLJ"/>
                                         </connections>
                                     </segmentedControl>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Signin or Register" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vBd-8a-LSz">
-                                        <rect key="frame" x="444.5" y="98" width="135" height="20.5"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="50" translatesAutoresizingMaskIntoConstraints="NO" id="Nza-Zx-kJ2">
-                                        <rect key="frame" x="212" y="188.5" width="600" height="30"/>
+                                        <rect key="frame" x="212" y="98" width="600" height="30"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CvN-PB-OiH">
                                                 <rect key="frame" x="0.0" y="0.0" width="42.5" height="30"/>
@@ -284,7 +278,7 @@
                                         </constraints>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="TEB-Nc-Yr2">
-                                        <rect key="frame" x="212" y="288.5" width="600" height="30"/>
+                                        <rect key="frame" x="212" y="198" width="600" height="30"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9w8-l6-AeZ">
                                                 <rect key="frame" x="0.0" y="0.0" width="77" height="30"/>
@@ -303,17 +297,15 @@
                                             <constraint firstAttribute="width" constant="600" id="Vdg-3A-U4X"/>
                                         </constraints>
                                     </stackView>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nDY-63-fAA">
-                                        <rect key="frame" x="212" y="388.5" width="600" height="34"/>
+                                    <button opaque="NO" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nDY-63-fAA">
+                                        <rect key="frame" x="212" y="298" width="600" height="34"/>
+                                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                         <rect key="contentStretch" x="0.0" y="0.0" width="0.0" height="0.0"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="600" id="hfL-fP-h9c"/>
                                         </constraints>
-                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="18"/>
                                         <color key="tintColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                                        <state key="normal" title="Sign-In">
-                                            <color key="titleColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                        </state>
+                                        <state key="normal" title="Sign-In"/>
                                         <connections>
                                             <action selector="SignInButtonTapped:" destination="gDe-7I-zhs" eventType="touchUpInside" id="PVy-Wu-OT8"/>
                                         </connections>
@@ -334,7 +326,6 @@
                         <outlet property="EmailTextField" destination="IU2-Nc-QGW" id="3k4-JZ-uqw"/>
                         <outlet property="PasswordTextField" destination="CFu-fH-pll" id="Wkk-GD-Rsb"/>
                         <outlet property="SignInButton" destination="nDY-63-fAA" id="Dyg-c2-Q9K"/>
-                        <outlet property="SignInLabel" destination="vBd-8a-LSz" id="kbI-8k-FI1"/>
                         <outlet property="SignInSelection" destination="PXS-Et-yuQ" id="F6u-My-V19"/>
                         <segue destination="ILP-Ib-Gy2" kind="show" identifier="GoToHomePage" id="qJE-tH-mdn"/>
                     </connections>
